0032236: Modeling Algorithms - Exception on calculation optimal bounding box

- BRepBndLib - added VOID box checks to AdjustFaceBox() method.
 - added the test